test/Fail/BothWithAndRHS.err
BothWithAndRHS.agda:5,1-6,17: error: [Syntax.MissingWithClauses]
Missing with-clauses for function f
